minor issue with close button on mobile nav

--- a/css/index.css
+++ b/css/index.css
@@ -127,7 +127,7 @@ a {
   }
 }
 
-.aside .close-nav-btn {
+#close-nav-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -138,7 +138,7 @@ a {
   color: #3f4756;
 }
 @media (min-width: 992px) {
-  .aside .close-nav-btn {
+  #close-nav-btn {
     display: none;
   }
 }
