--- a/scss/components/_aside.scss
+++ b/scss/components/_aside.scss
@@ -69,7 +69,7 @@
     }
 } 
 
-.aside .close-nav-btn {
+#close-nav-btn {
     display: flex;
     justify-content: center;
     align-items: center;   
